투명 스크롤, 버튼 위치 조정

--- a/signup/signup.css
+++ b/signup/signup.css
@@ -5,3 +5,15 @@
 .signup-btn {
     text-decoration-line: none;
 }
+
+.personal-info {
+    -ms-overflow-style: none; 
+} 
+
+.personal-info::-webkit-scrollbar{ 
+    display:none; 
+}
+
+.next-btn {
+    float: right;
+}
