--- a/todolist/style.css
+++ b/todolist/style.css
@@ -1,12 +1,12 @@
 @font-face {
-    font-family: 'HoengseongHanu';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2202@1.0/HoengseongHanu.woff') format('woff');
+    font-family: 'SUIT-Medium';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_suit@1.0/SUIT-Medium.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
 }
 
 *{
-    font-family: 'HoengseongHanu';
+    font-family: 'SUIT-Medium';
 }
 
 body, ul {
