--- a/lioncal/style.css
+++ b/lioncal/style.css
@@ -55,9 +55,12 @@ tbody {
     font-family: 'MinSans-Medium';
 }
 
+th[colspan="7"] {
+    padding-bottom: 10px;
+}
 .month {
     font-weight: bold;
-    font-size: 30px;
+    font-size: 25px;
 }
 
 .day {
@@ -66,9 +69,19 @@ tbody {
 
 .date {
     font-size: 7px;
+    
 }
 
-td:nth-child(1),td:nth-child(8),td:nth-child(15) {
+td:nth-child(1),td:nth-child(8),td:nth-child(15),
+td.holiday {
     color: red;
+}
+tr.day td {
+    width: 10px;
+    height: 20px;
+}
+td {
+    width: 35px;
+    height: 20px;
 }
 
