귀와 수염 완성

--- a/천하제일캐릭터/style.css
+++ b/천하제일캐릭터/style.css
@@ -9,7 +9,8 @@
 :root{
     --skin: rgb(253,234,219);
     --hair: #614124;
-    --ear: #E8C07D;
+    --ear: #FFD93D;
+    --ear-inner: #E4AEC5;
 }
 
 /* reset */
@@ -42,14 +43,14 @@ h1 {
 }
 
 body {
-    background-color: pink;
+    background-color: #E8C07D;
 }
 
 /* 얼굴 */
 .head {
-    /* display: flex; */
     position: relative;
 }
+
 .face {
     width: 300px;
     height: 280px;
@@ -64,24 +65,80 @@ body {
 
 .hair {
     background-color: var(--hair);
+    position: relative;
     width: 300px;
     height: 100px;
-    border-top-left-radius: 150px;
-    border-top-right-radius: 150px;
+    border-top-left-radius: 100px;
+    border-top-right-radius: 100px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 }
 
+/* 귀 */
 .ear {
-    position: absolute;
-    z-index: 10;
-    width: 0;
-    height: 0;
-    border-bottom: 30px solid var(--ear);
-    border-left: 15px solid var(var(--ear));
-    border-right: 15px solid var(var(--ear));
+    position: relative;
+    background-color: var(--ear);
 }
 
+.ear::before,
+.ear::after {
+    content: ' ';
+    position: absolute;
+    background-color: inherit;
+}
+
+
+.ear,
+.ear::before,
+.ear::after {
+    width: 50px;
+    height: 50px;
+    border-top-right-radius: 30%;
+}
+
+.ear {
+    transform: rotate(-60deg) skewX(-30deg) scale(1,.866);
+}
+
+.ear::before {
+    transform: rotate(-135deg) skewX(-45deg) scale(1.414,.707) translate(0,-50%);
+}
+
+.ear::after {
+    transform: rotate(135deg) skewY(-45deg) scale(.707,1.414) translate(50%);
+}
+.ear.left {
+    position: absolute;
+    bottom: 250px;
+    left: 30px;
+}
+
+.ear.right {
+    position: absolute;
+    bottom: 250px;
+    right: 30px;
+}
+
+.ear-inner {
+    position: absolute;
+    z-index: 2;
+    width: 40px;
+    height: 40px;
+    border-radius: 150px 150px 0 0;
+    background-color: var(--ear-inner);
+}
+
+.ear-inner.left {
+    position: absolute;
+    bottom: 231px;
+    left: 30px;
+}
+
+.ear-inner.right {
+    position: absolute;
+    bottom: 231px;
+    right: 30px;
+}
 /* 얼굴> 눈 */
 .eyebrow {
     position: absolute;
@@ -197,44 +254,34 @@ body {
 /* 얼굴>수염 */
 
 .whiskers {
-    position: absolute;
-    top: 0%;
-}
-.whiskers.whiskers {
     background-color: black;
     width: 50px;
-    height: 3px;
+    height: 5px;
 }
 
-.whiskers.left {
+.whiskers.left-top {
     position: absolute;
+    transform: rotate(15deg);
     bottom: 60px;
-    transform: rotate(10deg);
 }
 
-
-.whiskers.right {
-    
-}
-/* 얼굴 외 */
-/* .ear {
-    width: 40px;
-    height: 70px;
-    background-color: var(--skin);
+.whiskers.left-bottom {
     position: absolute;
-    top: 120px;
+    z-index: 5;
+    top: 240px;
     
-}
-
-.ear.left {
-    left: -30px;
-    border-top-left-radius: 40px;
-    border-bottom-left-radius: 20px;
 
 }
 
-.ear.right {
-    right: -30px;
-    border-top-right-radius: 40px;
-    border-bottom-right-radius: 20px;
-} */
+.whiskers.right-top {
+    position: absolute;
+    transform: rotate(-15deg);
+    left: 250px;
+    bottom: 60px;
+}
+
+.whiskers.right-bottom {
+    position: absolute;
+    top: 240px;
+    left: 250px;
+}
