--- a/천하제일캐릭터/style.css
+++ b/천하제일캐릭터/style.css
@@ -9,114 +9,97 @@
 :root{
     --skin: rgb(253,234,219);
     --hair: #614124;
-    --ear: #FFD93D;
+    --ear: #f5d64c;
     --ear-inner: #E4AEC5;
+    --lioncap: #eca63c;
+    --line: rgba(55, 55, 55, 0.95);
+
 }
 
-/* reset */
+/* setting */
 @import 'reset.css';
 *{
     font-family:  'establishRoomNo703OTF';
 }
 body {
     margin: 0%;
+    background-color: #6EDCD9;
 }
 
 h1 {
-    margin: 0;
-    font-size: ;
+
+    font-size: 70px;
     font-weight: normal;
     text-align: center;
-    padding: 100px 0 50px 0;
+
 }
 
 
-/* layouts */
-
-.wrapper {
-    
+/* 얼굴 */
+.face {
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%,-50%);
-
-}
-
-body {
-    background-color: #E8C07D;
-}
-
-/* 얼굴 */
-.head {
-    position: relative;
-}
-
-.face {
-    width: 300px;
-    height: 280px;
+    width: 290px;
+    height: 230px;
     background-color: var(--skin);
     margin: 0 auto;
-    border-top-left-radius: 150px;
-    border-top-right-radius: 150px;
-    border-bottom-left-radius: 50%;
-    border-bottom-right-radius: 50%;
+    border-radius: 50% 50% 51% 49% / 40% 41% 59% 60% ;
+    box-shadow: inset -6px -4px 18px -3px rgba(184,79,22,1);
+    border: 5px solid var(--line);
 
+}
+
+.lioncap {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    width: 400px;
+    height: 400px;
+    border-radius: 49% 48% 52% / 32% 29% 71% 68%; 
+    background-color: var(--lioncap);
+    border: 5px solid var(--line);
+    box-shadow: inset -6px -4px 18px -3px rgba(184,79,22,1);
 }
 
 .hair {
     background-color: var(--hair);
     position: relative;
-    width: 300px;
+    width: 292px;
     height: 100px;
     border-top-left-radius: 100px;
     border-top-right-radius: 100px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    border: 5px solid var(--line);
 }
 
 /* 귀 */
 .ear {
     position: relative;
+    width: 70px;
+    height: 70px;
+    border-radius: 150px 150px 0 0;
     background-color: var(--ear);
+    box-shadow: inset -6px -4px 18px -3px rgba(184,79,22,1);
+    border: 5px solid var(--line);
+    animation-name: bigger-ear;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
 }
 
-.ear::before,
-.ear::after {
-    content: ' ';
-    position: absolute;
-    background-color: inherit;
-}
-
-
-.ear,
-.ear::before,
-.ear::after {
-    width: 50px;
-    height: 50px;
-    border-top-right-radius: 30%;
-}
-
-.ear {
-    transform: rotate(-60deg) skewX(-30deg) scale(1,.866);
-}
-
-.ear::before {
-    transform: rotate(-135deg) skewX(-45deg) scale(1.414,.707) translate(0,-50%);
-}
-
-.ear::after {
-    transform: rotate(135deg) skewY(-45deg) scale(.707,1.414) translate(50%);
-}
 .ear.left {
     position: absolute;
-    bottom: 250px;
-    left: 30px;
+    bottom: 240px;
+    left: 25px;
 }
 
 .ear.right {
     position: absolute;
-    bottom: 250px;
-    right: 30px;
+    bottom: 240px;
+    right: 25px;
 }
 
 .ear-inner {
@@ -126,18 +109,23 @@ body {
     height: 40px;
     border-radius: 150px 150px 0 0;
     background-color: var(--ear-inner);
+    box-shadow: inset -6px -4px 18px -3px rgba(184,79,22,1);
+    border: solid 5px var(--line);
+    animation-name: bigger-ear;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
 }
 
 .ear-inner.left {
     position: absolute;
-    bottom: 231px;
-    left: 30px;
+    bottom: 250px;
+    left: 40px;
 }
 
 .ear-inner.right {
     position: absolute;
-    bottom: 231px;
-    right: 30px;
+    bottom: 250px;
+    right: 40px;
 }
 /* 얼굴> 눈 */
 .eyebrow {
@@ -147,18 +135,19 @@ body {
     height: 50px;
     border-radius: 50%;
     margin-top: 10px;
-
 }
 
 .eyebrow.left {
     position: absolute;
     left: 40px;
+    top: 55px;
 
 }
 
 .eyebrow.right {
     position: absolute;
     right: 40px;
+    top: 55px;
 }
 
 .eyebrow:after {
@@ -254,34 +243,74 @@ body {
 /* 얼굴>수염 */
 
 .whiskers {
-    background-color: black;
-    width: 50px;
-    height: 5px;
+    background-color: var(--line);
+    width: 70px;
+    height: 6px;
 }
 
 .whiskers.left-top {
     position: absolute;
     transform: rotate(15deg);
     bottom: 60px;
+    right: 230px;
 }
 
 .whiskers.left-bottom {
     position: absolute;
-    z-index: 5;
-    top: 240px;
-    
+    top: 190px;
+    right: 230px;
 
 }
 
 .whiskers.right-top {
     position: absolute;
     transform: rotate(-15deg);
-    left: 250px;
+    left: 230px;
     bottom: 60px;
 }
 
 .whiskers.right-bottom {
     position: absolute;
-    top: 240px;
-    left: 250px;
+    top: 190px;
+    left: 230px;
+}
+
+/* 얼굴 외>꼬리 */
+.tail {
+    display: inline;
+
+}
+
+.tail-head {
+    position: absolute;
+    background-color: var(--lioncap);
+    width: 50px;
+    height: 50px;
+    border-radius: 100% 0% 91% 9% / 93% 0% 100% 7% ;
+    right: 195px;
+    top: 375px;
+    border: 5px solid var(--line);
+    box-shadow: inset -6px -4px 18px -3px rgba(184,79,22,1);
+}
+
+.tail-curved {
+    position: absolute;
+    right: 200px;
+    bottom: 192px;
+    width: 350px; 
+    height: 100px;  
+    border: solid 5px var(--line);
+    border-color: var(--line) transparent transparent transparent;
+    border-radius: 50%/100px 100px 0 0;
+    transform: rotate(150deg);
+}
+
+/* 애니메이션 */
+@keyframes bigger-ear {
+    0% {
+        transform:scaleY(1)
+    }
+    100% {
+        transform: scaleY(1.2);
+    }
 }
