--- a/천하제일캐릭터/style.css
+++ b/천하제일캐릭터/style.css
@@ -23,16 +23,17 @@
 }
 body {
     margin: 0%;
-    background-color: #6EDCD9;
+    background-color: #f3eebd;
 }
 
 h1 {
 
-    font-size: 70px;
+    font-size: 65px;
     font-weight: normal;
     text-align: center;
 
 }
+
 
 
 /* 얼굴 */
@@ -61,7 +62,8 @@ h1 {
     border-radius: 49% 48% 52% / 32% 29% 71% 68%; 
     background-color: var(--lioncap);
     border: 5px solid var(--line);
-    box-shadow: inset -6px -4px 18px -3px rgba(184,79,22,1);
+    box-shadow: inset -13px -4px 18px -3px rgba(184,79,22,1);
+   
 }
 
 .hair {
@@ -81,7 +83,7 @@ h1 {
     position: relative;
     width: 70px;
     height: 70px;
-    border-radius: 150px 150px 0 0;
+    border-radius: 150px 150px 50px 50px;
     background-color: var(--ear);
     box-shadow: inset -6px -4px 18px -3px rgba(184,79,22,1);
     border: 5px solid var(--line);
@@ -287,7 +289,7 @@ h1 {
     width: 50px;
     height: 50px;
     border-radius: 100% 0% 91% 9% / 93% 0% 100% 7% ;
-    right: 195px;
+    right: 295px;
     top: 375px;
     border: 5px solid var(--line);
     box-shadow: inset -6px -4px 18px -3px rgba(184,79,22,1);
@@ -295,7 +297,7 @@ h1 {
 
 .tail-curved {
     position: absolute;
-    right: 200px;
+    right: 300px;
     bottom: 192px;
     width: 350px; 
     height: 100px;  
@@ -311,6 +313,16 @@ h1 {
         transform:scaleY(1)
     }
     100% {
-        transform: scaleY(1.2);
+        transform: scaleY(1.1);
+    }
+}
+
+@keyframes moving-lion {
+    0% {
+        transform: scale3d()
+    }
+
+    100% {
+        transform: translateY()
     }
 }
