--- a/구현실습/로그인2/login2.css
+++ b/구현실습/로그인2/login2.css
@@ -7,6 +7,7 @@
 }
 *{
     font-family: 'SpoqaHanSansNeo-Regular';
+    box-sizing: border-box;
 }
 body,p,ul,button,img{
     margin: 0;
@@ -33,8 +34,7 @@ button {
     border-color: transparent;
 }
 .box {
-    width: 440px;
-    height: 180px;
+    width: 500px;
     padding: 30px;
     border: 1px solid #C4C4C4;
     border-radius: 5px;
