--- a/천하제일캐릭터/style.css
+++ b/천하제일캐릭터/style.css
@@ -282,6 +282,7 @@ h1 {
 /* 얼굴 외>꼬리 */
 .tail {
     position: relative;
+    animation: moving-tail 2s infinite ease-in-out;
 }
 
 .tail-head {
@@ -325,5 +326,18 @@ h1 {
 
     100% {
         transform: translateY()
+    }
+}
+
+@keyframes moving-tail {
+    0% {
+        transform: rotateY(0);
+    }
+    
+    50% {
+        transform: rotateY(20deg);
+    }
+    100% {
+        transform: rotateY(-20deg);
     }
 }
