개략적 완성

--- a/구현실습/로그인popup/loginpop.css
+++ b/구현실습/로그인popup/loginpop.css
@@ -5,6 +5,8 @@
     font-weight: normal;
     font-style: normal;
 }
+@import 'reset.css';
+
 *{
     font-family: 'SpoqaHanSansNeo-Regular';
     box-sizing: border-box;
