--- a/구현실습/드롭박스/style.css
+++ b/구현실습/드롭박스/style.css
@@ -1,18 +1,16 @@
-
+@import 'reset.css';
 @font-face {
     font-family: 'SpoqaHanSansNeo-Regular';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SpoqaHanSansNeo-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
+
 *{
     font-family: 'SpoqaHanSansNeo-Regular';
     box-sizing: border-box;
 }
-body,p,ul,button,img,div{
-    margin: 0;
-    padding: 0;
-}
+
 p{
     margin-left: 14px;
 }
@@ -29,18 +27,21 @@ ul{
 li {
     display: block;
 }
+
 .container {
     display: flex;
     height: 100vh;
     justify-content: center;
     align-items: center;
+    font-family: 'SpoqaHanSansNeo-Regular';
 }
-.one,.two,.three {
+.one,.two {
     width:210px;
     height: 250px;
     text-align: center;
     margin-left: 20px;
 }
+
 .select-box {
     width: 200px;
     border: 1px solid #C4C4C4;
@@ -57,7 +58,7 @@ li {
 
 .dropbox {
     width: 200px;
-    /* height: 208px; */
+    padding: 0 8px;
     text-align: left;
     border: 1px solid #C4C4C4;
     border-radius: 14px;
@@ -68,25 +69,27 @@ li {
     display: none;
 }
 
-.select-box.shadow {
-    border: 3px solid rgba(248, 228, 255, 1);
+.select-box.shadow:hover {
     border: 1px solid rgba(155, 81, 224, 1);
+    outline: 3px solid rgba(248, 228, 255, 1);
 }
 .item {
     font-size: 14px;
     width: 200px;
     height: 40px;
-    padding: 12px 0 12px 18px; 
+    padding: 12px 0 12px 10px; 
 }
 
-.item.selected {
-    padding: 5px 8px 18px 8px;
-    
-    
-}
-
-.selected-item {
+.item:hover {
     background-color:rgba(248, 228, 255, 1) ;
-    padding: 7px 144px 7px 10px;
+    width: 184px;
     border-radius: 8px;
+}
+
+.item:first-child {
+    margin-top: 4px;
+}
+
+.item:last-child {
+    margin-bottom: 4px;
 }
