파일 이름 변경

--- a/구현실습/로그인모달/reset.css
+++ b/구현실습/로그인모달/reset.css
@@ -46,3 +46,21 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+/* 재현님 추가 */
+a {
+    text-decoration: none;
+    color: #000;
+}
+
+.txt-hide {
+    position: absolute;
+    clip: rect(0 0 0 0);
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+}
+img {
+    width: 100%;
+    vertical-align: top;
+}
