--- a/구현실습/드롭박스/style.css
+++ b/구현실습/드롭박스/style.css
@@ -47,7 +47,7 @@
 }
 .dropbox {
     position: absolute;
-    top:145px;
+    top:53%;
     width: 200px;
     visibility: hidden;
     padding: 0 8px;
