--- a/carousel/style/style.css
+++ b/carousel/style/style.css
@@ -3,17 +3,57 @@
 #app {
     width: 100vw;
     height: 100vh;
+    margin: 100px auto;
     font-family: 'Poppins', sans-serif;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
+    perspective: 1000px;
+
 }
 
 .color-list{
-    display: flex;
+    position: fixed;
+    width: 250px;
+    height: 250px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transform-style: preserve-3d;
+    animation: movingCarousel 40s steps(10000,end) infinite;
+}
+
+.color-list li {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+}
+
+.color-list li img{
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
 }
 
 .btn-wrapper{
-    gap: 4rem;
+    display: flex;
+    gap: 100px;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+.btn-wrapper button{
+    padding:5px;
+    background-color: white;
+    cursor: pointer;
+}
+
+@keyframes movingCarousel {
+    from{
+        transform: rotateY(0deg);
+    }
+    to{
+        transform: rotateY(360deg);
+    }
 }
